<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_1"
            android:text="@string/about_1"
            android:textAlignment="center"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_2"
            android:id="@+id/about_2"
            android:lineSpacingExtra="1sp"
            android:textSize="17sp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/about_3"
                android:layout_weight="1"
                android:lineSpacingExtra="1sp"
                android:text="@string/about_3"
                android:textSize="17sp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/website_logo"
                android:id="@+id/website"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/about_5"
                android:clickable="true"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_4"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="1sp"
                android:text="@string/about_4"
                android:textSize="17sp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/github_icon"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/about_6"
                android:id="@+id/github"
                android:layout_gravity="center"
                android:clickable="true" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>